[package]
name = "network"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.16.1", features = ["async-std-runtime"] }
bevy = "0.5.0"
futures-util = "0.3.17"
smol = "1.2.5"

skitspel = { path = "../../common/skitspel" }
util_bevy = { path = "../../common/util_bevy" }
