[package]
name = "volleyball"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_prototype_lyon = "0.3.1"
bevy_rapier2d = "0.11.0"
rand = "0.8.4"

skitspel = { path = "../../common/skitspel" }
util_bevy = { path = "../../common/util_bevy" }
util_rapier = { path = "../../common/util_rapier" }
